[project]
name = "handy-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "sh>=2.2.2",
    "termplotlib>=0.3.9",
]

[project.scripts]
lc-memplot = "handy_scripts.lc_memplot:main"
yumrepo-stats = "handy_scripts.yumrepo_stats:main"
